# Supemon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
docs/: battle.md  center.md  items.md  project.md  save.md
include/: battle.h  center.h  display.h  item.h  move.h  player.h  save.h  shop.h  supemon.h  utils.h
src/: battle.c  center.c  display.c  item.c  save.c  shop.c  supemon.c  utils.c
